Tue Oct  6 19:38:26 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* b-barrier.rb, b-shuffle.rb: require し忘れ(merged by
	  0.5.2-003-travel-01)

Fri Oct  2 18:19:27 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* master.rb: deep-connect ipv4 only対応による変更

Wed Sep 30 16:33:13 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* controller.rb, bjob.rb b-cat.rb, njob.rb, block-source.rb: 
	  [SR#102] gbreak対応

Mon Sep 28 18:04:16 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy.rb: [SR#141] FilterChain追加

Mon Sep 28 17:33:20 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* Makefile: tgzタグでスナップショットをとるファイルを修正
	* controller.rb, b-direct-product.rb, n-direct-product.rb:
	  [SR#102] 直積対応
	* controller.rb, bjob.rb, b-join.rb, b-zipper.rb, bhere.rb: 上流の
	  bjobから下流のnjobを作成したときに初期化できるようにした.

Wed Sep 16 17:08:57 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* local-file-output.rb: [BUG#135]対応.

Tue Sep 15 19:47:53 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* n-mod-group-by.rb: 消えるはずのゴミが消えない問題に対応
	* port.rb: CTLTOKEN_SET_NO_IMPORT 対応

Tue Sep 15 18:44:11 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* lib/fairy/node/n-each-element-selector.rb,
	  lib/fairy/node/n-find.rb, lib/fairy/node/n-input-iota.rb,
	  lib/fairy/node/n-input-varray.rb: requireし忘れ

Tue Sep 15 18:22:11 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* local-file-output.rb, here.rb: [BUG#135]対応. 消えるはずのゴミ
	  が消えない問題に対応
	* bin/master, bin/inspector: [BUG#147] 実行権を設定

Fri Sep  4 18:59:36 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* n-mod-group-by.rb: basic_eachでhashがテストコードのままだった

Fri Sep  4 17:59:52 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* join.rb, b-join.rb, n-join.rb: [SR#102] join対応
	* equijoun.rb: [SR#102] equijoin対応
	* b-zipper.rb: importにno_importを設定するのを忘れていた
	* bjob.rb: 例外で間違ったローカル変数を参照していた

Fri Aug 28 14:20:58 2009  Hajime Masuda  <hajime.masuda@mail.rakuten.co.jp>

	* roma-put.rb: smap -> smap2 修正漏れ

Thu Aug 27 19:37:34 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>
