@@ -12,8 +12,8 @@ module Fairy
   CONF["giant"].RUBY_BIN = ENV["FAIRY_RUBY"] || "ruby-dev"
 
 ##CONF.MASTER_HOST = #NO SYSTEM DEFAULT VALUE
-#  CONF.MASTER_HOST = "emperor2"
-  CONF.MASTER_HOST = "giant"
+  CONF.MASTER_HOST = "emperor2"
+#  CONF.MASTER_HOST = "giant"
 ##CONF.MASTER_PORT = "19999"
 
   CONF["emperor2"].HOME = ENV["FAIRY_HOME"] || File.expand_path(".")
