@@ -39,6 +39,10 @@ module Fairy
       @nodes_status_mutex = Mutex.new
       @nodes_status_cv = ConditionVariable.new
 
+      @create_node_thread = nil
+      # gbreakのときに安全に@create_node_threadスレッドをとめるため
+      @create_node_mutex = Mutex.new
+
       @context = Context.new(self)
 
       start_watch_node_status if watch_status?
@@ -175,6 +179,7 @@ module Fairy
 	ret = nil
 	@controller.assign_processors(self, @create_node_mutex) do 
 	  |processor, mapper, opts={}|
+Log::debug(self, "BBBBBBBBBBBBBBBBB: #{opts.inspect}")
 	  njob = create_and_add_node(processor, mapper, opts)
 	  no += 1
 	  njob
@@ -203,12 +208,19 @@ module Fairy
     end
 
     def create_and_add_node(processor, mapper, opts={})
+Log::debug(self, "AAAAAAAAAAAAAA:S")
       node = create_node(processor) {|node|
+Log::debug(self, "AAAAAAAAAAAAAA:1")
 	if opts[:init_njob]
+Log::debug(self, "AAAAAAAAAAAAAA:2 ininit_njob")
 	  opts[:init_njob].call(node)
+Log::debug(self, "AAAAAAAAAAAAAA:3")
 	end
+Log::debug(self, "AAAAAAAAAAAAAA:4")
 	mapper.bind_input(node)
+Log::debug(self, "AAAAAAAAAAAAAA:5")
       }
+Log::debug(self, "AAAAAAAAAAAAAA:E")
       node
     end
 
@@ -282,7 +294,7 @@ module Fairy
     end
 
     def each_export_by(njob, mapper, &block)
-      block.call njob.export
+      block.call njob.export, nil
     end
 
     def bind_export(exp, imp)
