@@ -1,3 +1,8 @@
+Wed Oct 14 19:32:45 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>
+
+	* b-direct-product.rb, b-inputtable.rb, binput.rb, bjob.rb,
+	  controller.rb: [BUG#151] debug01
+
 Tue Oct  6 19:38:26 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>
 
 	* b-barrier.rb, b-shuffle.rb: require し忘れ(merged by
